added secure otp authentication functionality and done with login-user route
